<resources>
    <!--    App-->
    <string name="app_name">PeamTicker</string>
    <string name="main_title">"PeamTicker (%1$d)"</string>

    <!--    Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    Headlines-->
    <string name="name">Name</string>
    <string name="grade">Grade</string>
    <string name="attributes">Attr</string>
    <string name="age">Age</string>
    <string name="plus_minus">+/-</string>
    <string name="success">Success</string>
    <string name="games">Games</string>
    <string name="win_rate">Win rate</string>
    <string name="success_vs">Success\nVs</string>
    <string name="games_vs">Games\nVs</string>
    <string name="success_with">Success\nWith</string>
    <string name="games_with">Games\nWith</string>

    <!--    Buttons-->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">yes</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="clear_all_coming">Clear all</string>
    <string name="action_send_statistics">Send Statistics</string>

    <!--    Menus-->
    <string name="add_player">Add player</string>
    <string name="show_archived">Players Archive</string>
    <string name="make_teams">Make teams</string>
    <string name="enter_results">Enter Results</string>
    <string name="action_statistics_10">Last 10 games</string>
    <string name="action_statistics_50">Last 50 games</string>
    <string name="action_statistics_no_limit">All games</string>

    <!--    Settings - values are saved in preferences - don't change-->
    <string name="setting_team_color_scheme_color_1">Orange -- Blue</string>
    <string name="setting_team_color_scheme_color_2">Black -- White</string>

    <!--    Messages-->
    <string name="parentheses">"(%1$d)"</string>
    <string name="team_data_headline">" Count \n Grade \n Success \n  Win Rate \n \n  "</string>
    <string name="team_data_headline_forecast">" Count \n Grade \n Success \n Win Rate \n 50% StdDev \n Chemistry "</string>
    <string name="team_data">" %1$d \n %2$.1f (&#177;%3$.1f) \n %4$d \n %5$d%% \n %6$s \n %7$s "</string>
    <string name="team_data_forecast">" %1$d%%"</string>
    <string name="team_data_win_rate_stddev">"&#177;%1$d%%"</string>
    <string name="team_public_stats">" Age: %1$d "</string>
    <string name="player_stat">"Games: %1$s \nWins: %2$s"</string>
    <string name="player_wins_participation">"%1$s (%2$s)"</string>
    <string name="player_participation_statistics">"%1$s + \n(G:%2$d, W:%3$02d%%)"</string>
    <string name="player_analysis">"(W:%1$02d%% G:%2$02d) [%3$s]"</string>
    <string name="player_analysis_collaborator">"(W:%1$02d%% G:%2$02d) [S:%3$s]"</string>
    <string name="player_analysis_selected">"(W:%1$02d%% G:%2$02d) [%3$s]"</string>
    <string name="player_analysis_selected_win_rate">"%1$02d%%"</string>
    <string name="player_analysis_selected_games">"%1$02d</string>
    <string name="operation_move">* Click the players you want to move \n* Click icon to exit move mode</string>
    <string name="operation_divide_by_collaboration">* AI in progress :)</string>
    <string name="analysis_progress_update">"%1$d%% (%2$s)"</string>
    <string name="operation_divide_by_age">* Divide by age :)</string>
    <string name="operation_analysis">* Click the players for deeper analysis \n* Click icon to exit analysis mode</string>
    <string name="copy_players_success">Teams division applied</string>
</resources>
